# initbot

./: .dockerignore  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Google Cloud Services.md  README.md  REUSE.toml  SECURITY.md  compose.yml  docker-bake.hcl  import.py  initbot.js  initbot_sample.json  package.json  pyproject.toml  setup.cfg  zizmor.yml
.github/: dependabot.yml
.github/scripts/: check_python_versions.py
.github/workflows/: main.yml  mutation-testing.yml  open-pr.yml  pipeline.yml  python-versions.yml  scorecard.yml
docs/: discord-bot-setup.md  web-sessions.md
initbot/: __main__.py  base.py  bot.py  main.py  utils.py
initbot/bot/: bot.py  config.py
plans/: 01-unify-tool-versions.md  character-pruning.md  discord-initiative-live-updates.md  discord-voice-transcription-tools.md  ideas.md  mypy-alternatives-comparison.md  player-entity.md  protocol-vs-dataclass-data-layer.md  publish-01-ghcr-latest.md  publish-02-compose-pull-deployment.md  publish-03-pin-base-image.md  publish-04-signing-sbom.md  publish-05-versioned-releases.md  publish-06-build-caching.md  qmail-style-process-decomposition.md  web-chat-gap-analysis.md
tests/: conftest.py  helpers.py  test_access_control.py  test_auto_remediate.py  test_bot.py  test_bot_pruning.py  test_bot_udp_listener.py  test_character_player_id.py  test_commands_ability.py  test_commands_actions.py  test_commands_augurs.py  test_commands_character_extended.py  test_commands_chars.py  test_commands_checks.py  test_commands_cls.py  test_commands_crit.py  test_commands_init.py  test_commands_levels.py  test_commands_luck.py  test_commands_occupation.py  test_commands_pruning.py  test_commands_roll.py  test_commands_tarot.py  test_commands_web.py  test_live_inis.py  test_main.py  test_models_roll.py  test_player_state.py  test_pruning.py  test_run_script.py  test_session_secret.py  test_state.py  test_state_persistence.py  test_sync_player.py  test_utils.py  test_web_login_tokens.py
tools/: auto_remediate.py  configure.py  configure.sh  fix_workspace_deps.py  initbot.service.template  precommit.sh  run.sh  run_chat.sh  run_compose.sh  run_playwright.sh  run_web.sh  run_web_dev.sh  run_web_ngrok.sh  run_web_standalone.sh  run_web_standalone_dev.sh  run_with_ngrok.sh  set_up_dev.sh  set_up_systemd.sh  set_up_uv.sh  setup.sh  test.sh  update_uv_version.sh  uv_version.sh  vendor-web-assets.sh
(+69 files in other folders)
