[project]
name = "initbot"
version = "0.1.0"
requires-python = ">=3.8"
description = "A Discord bot that manages RPG character initiatives"
authors = [{name = "Stefan Götz", email="github.nooneelse@spamgourmet.com"}]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
dependencies = [
    "discord-py~=2.3",
    "peewee~=3.17",
    "pydantic-settings~=2.0",
    "pydantic~=2.0",
    "python-dotenv~=0.21",
    "typing-extensions>=4.12.2 ; python_full_version < '3.11'",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.5.0",
    "black>=24.8.0",
    "coverage>=7.6.1",
    "mypy>=1.11.2",
    "pylint>=3.2.7",
    "pytest>=8.3.3",
    "types-peewee>=3.17.7.20241017",
]

[tool.mypy]
check_untyped_defs = true
