[project]
name = "initbot"
version = "0.1.0"
requires-python = ">=3.10"
description = "A Discord bot that manages RPG character initiatives"
authors = [{name = "Stefan Götz", email="github.nooneelse@spamgourmet.com"}]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "discord-py~=2.3",
    "peewee~=3.17",
    "pydantic-settings~=2.0",
    "pydantic~=2.0",
    "python-dotenv~=0.21",
    "typing-extensions>=4.12.2 ; python_full_version < '3.11'",
]

[project.scripts]
initbot = "initbot.bot.bot:run"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "black>=24.8.0",
    "coverage>=7.6.1",
    "flake8>=7.3.0",
    "mypy>=1.11.2",
    "pylint>=3.2.7",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24",
    "types-peewee>=3.17.7.20241017",
    "zizmor>=1.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.mypy]
check_untyped_defs = true
